fixed typo in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">My product is the best beeer ever.</p>
+          <p class="lead">My product is the best beer ever.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
