--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="~/bitstarter/no waiting 400 x 300.jpg">
+          <img class="img-polaroid" src="~/bitstarter/no_waiting.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
