--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
         <div class="span5 copy">
           <p>
             How much would it cost you for treatment if you broke your arm?  Which doctor in the are
-	    is the best at fixing a broken arm?  How much do they charge?  These questions are difficult
-	    to answer today.  
+	    is the best at fixing a broken arm?  How much do they charge?  These questions are difficult	    to answer today.  
 	    </p>
 	  <p>
 	    Docarina aims to change that. 
